<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroTela">

    <TextView
        android:id="@+id/registroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="562dp"
        android:text="@string/registrar"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registroText" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:width="250dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/sobrenome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_marginTop="21dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/email_registro"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/senha_registro"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="182dp"
        android:layout_height="59dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="110dp"
        android:text="@string/button_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>