<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContatoTelas">

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="236dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contato_numero"
        android:inputType="phone"
        android:autofillHints="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contato_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="336dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contato_aniversario"
        android:inputType="date"
        android:autofillHints="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="384dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contato_endereco"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="625dp"
        android:text="@string/contato_titulo"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Imagem"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="516dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="155dp"
        android:background="@color/white"
        android:ems="10"
        android:autofillHints="name"
        android:hint="@string/contato_empresa"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="105dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contato_sobrenome"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="348dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contato_nome"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contato_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
</androidx.constraintlayout.widget.ConstraintLayout>