<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="354dp"
        android:layout_height="477dp"
        android:layout_marginTop="127dp"
        android:layout_marginBottom="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BotaoLogin"
        android:layout_width="167dp"
        android:layout_height="57dp"
        android:layout_marginTop="424dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fildSenha"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginBottom="323dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/senha_hind"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fildEmail" />

    <TextView
        android:id="@+id/textBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/bem_vindo"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/fildEmail"
        android:layout_width="265dp"
        android:layout_height="54dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="187dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/email_hind"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="167dp"
        android:layout_height="57dp"
        android:layout_marginBottom="171dp"
        android:text="@string/button_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fildEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>